# soundlab

./: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-4a038c8d2efb7a9ca2cbc5e3f8053b43944257ed46e12e0df87259803a754fb1.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  import.rs  lib.rs  logger.rs  main.rs  settings.rs
src-tauri/src/api/: handlers.rs
src-tauri/src/cache/: cache.rs  cache_module.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs  settings.rs  sound.rs
src-tauri/src/import/: importer.rs  mod.rs
src-tauri/src/settings/: manager.rs  mod.rs
src-tauri/src/utils/: logger.rs
src/components/: FileImporter.tsx  IconPicker.tsx  Layout.tsx  Navbar.tsx  SampleItem.tsx  Titlebar.tsx
src/components/ui/Badge/: Badge.tsx  Badge.types.ts
src/components/ui/Button/: Button.tsx  Button.types.ts
src/components/ui/ButtonGroup/: ButtonGroup.tsx  ButtonGroup.types.ts
src/components/ui/Card/: Card.tsx  Card.types.ts
src/components/ui/Dialog/: Dialog.tsx  Dialog.types.ts
src/components/ui/Gradient/: Gradient.tsx  Gradient.types.ts
src/components/ui/Input/: Input.tsx  Input.types.ts
src/components/ui/Select/: Select.tsx  Select.types.ts
src/components/ui/Slider/: Slider.tsx  Slider.types.ts
src/components/ui/Spinner/: Spinner.tsx  Spinner.types.ts
src/components/ui/Textarea/: Textarea.tsx  Textarea.types.ts
src/context/: SoundContext.tsx
src/lib/: cn.ts  debounce.ts  soundImport.ts
src/pages/: Favorites.tsx  Library.tsx  Settings.tsx
src/types/: Sound.ts
