[package]
name = "SoundLab"
version = "0.0.5"
description = "Simple App for Your Sounds."
repository = "https://github.com/prodbyeagle/soundlab"
authors = ["prodbyeagle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soundlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["full"] }
id3 = "1.16.2"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.5"
futures = "0.3.31"
lru = "0.13.0"
lazy_static = "1.5.0"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
dirs = "6.0.0"
